NetBSD Problem Report #32617

From gson@araneus.fi  Tue Jan 24 16:40:26 2006
Return-Path: <gson@araneus.fi>
Received: from gusto.araneus.fi (gusto.araneus.fi [204.152.189.154])
	by narn.netbsd.org (Postfix) with ESMTP id DE2F463B852
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 24 Jan 2006 16:40:25 +0000 (UTC)
Message-Id: <200601241640.k0OGeNeX002420@guava.araneus.fi>
Date: Tue, 24 Jan 2006 18:40:23 +0200 (EET)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@netbsd.org
Subject: Background color inconsistent in sysinst
X-Send-Pr-Version: 3.95

>Number:         32617
>Category:       install
>Synopsis:       Background color inconsistent in sysinst
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    jdc
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jan 24 16:45:00 +0000 2006
>Closed-Date:    Thu Jan 26 20:19:31 +0000 2006
>Last-Modified:  Thu Jan 26 20:19:31 +0000 2006
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current releng-200601220000Z
>Organization:
>Environment:
System: NetBSD guava.araneus.fi
Architecture: i386
Machine: i386
>Description:

When running sysinst from -current on the VGA console of an i386
system, the text is shown in white on a blue background, but those
parts of the screen that do not contain text are not blue as they
should be, but black.  This is unsightly.  See the screenshot in
<http://www.gson.org/netbsd/bugs/sysinst-bg/screenshot.gif>.  This
happens both on physical machines and in qemu; it does not happen
when installing 3.0.

>How-To-Repeat:

Either try to install -current on a physical i386 machine, or do this:

  pkg_add qemu
  ftp ftp://ftp.netbsd.org/pub/NetBSD-daily/HEAD/200601220000Z/i386/installation/floppy/boot-big.fs
  qemu -m 64 -fda boot-big.fs -boot a

>Fix:

Not known.  I don't even know if this is a bug in sysinst, curses,
termcap, or wscons.

>Release-Note:

>Audit-Trail:
From: David Laight <david@l8s.co.uk>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: install/32617: Background color inconsistent in sysinst
Date: Wed, 25 Jan 2006 21:44:06 +0000

 On Tue, Jan 24, 2006 at 04:45:00PM +0000, Andreas Gustafsson wrote:
 > >Number:         32617
 > >Category:       install
 > >Synopsis:       Background color inconsistent in sysinst
 > 
 > Not known.  I don't even know if this is a bug in sysinst, curses,
 > termcap, or wscons.

 I'd bet on the effect of some recent changes to the way libcurses
 handles attributes.

 (I've been testing sysinst on a system with a serial console recently)

 	David

 -- 
 David Laight: david@l8s.co.uk

From: Julian Coleman <jdc@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: PR/32617 CVS commit: src/lib/libcurses
Date: Thu, 26 Jan 2006 07:26:37 +0000 (UTC)

 Module Name:	src
 Committed By:	jdc
 Date:		Thu Jan 26 07:26:37 UTC 2006

 Modified Files:
 	src/lib/libcurses: clrtobot.c clrtoeol.c erase.c insch.c

 Log Message:
 Use the window background colour, not the default colour.
 Should fix PR install/32617


 To generate a diff of this commit:
 cvs rdiff -r1.16 -r1.17 src/lib/libcurses/clrtobot.c
 cvs rdiff -r1.19 -r1.20 src/lib/libcurses/clrtoeol.c \
     src/lib/libcurses/erase.c
 cvs rdiff -r1.18 -r1.19 src/lib/libcurses/insch.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: install-manager->jdc
Responsible-Changed-By: jdc@netbsd.org
Responsible-Changed-When: Thu, 26 Jan 2006 07:33:11 +0000
Responsible-Changed-Why:
My bug.


State-Changed-From-To: open->feedback
State-Changed-By: jdc@netbsd.org
State-Changed-When: Thu, 26 Jan 2006 07:33:11 +0000
State-Changed-Why:
Please could you update src/lib/libcurses?
The problem should be gone.


From: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@netbsd.org
Cc: jdc@netbsd.org, install-manager@netbsd.org,
	netbsd-bugs@netbsd.org, gnats-admin@netbsd.org
Subject: Re: install/32617 (Background color inconsistent in sysinst)
Date: Thu, 26 Jan 2006 19:59:42 +0200

 jdc@netbsd.org wrote:
 > Please could you update src/lib/libcurses?
 > The problem should be gone.

 I did a full distribution build and can confirm that the bug is fixed.
 Thanks.
 -- 
 Andreas Gustafsson, gson@gson.org

State-Changed-From-To: feedback->closed
State-Changed-By: jdc@netbsd.org
State-Changed-When: Thu, 26 Jan 2006 20:19:31 +0000
State-Changed-Why:
Bug Fixed.
Thanks for the PR!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.