Use the window background colour, not the default colour. Should fix PR install/32617