lib/libcurses/erase.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: erase.c,v 1.19 2006/01/15 11:43:54 jdc Exp $	*/
+/*	$NetBSD: erase.c,v 1.20 2006/01/26 07:26:37 jdc Exp $	*/
 
 /*
  * Copyright (c) 1981, 1993, 1994
@@ -34,7 +34,7 @@
 #if 0
 static char sccsid[] = "@(#)erase.c	8.2 (Berkeley) 5/4/94";
 #else
-__RCSID("$NetBSD: erase.c,v 1.19 2006/01/15 11:43:54 jdc Exp $");
+__RCSID("$NetBSD: erase.c,v 1.20 2006/01/26 07:26:37 jdc Exp $");
 #endif
 #endif				/* not lint */
 
@@ -71,7 +71,7 @@ werase(WINDOW *win)
 	__CTRACE("werase: (%p)\n", win);
 #endif
 	if (__using_color && win != curscr)
-		attr = __default_color;
+		attr = win->battr & __COLOR;
 	else
 		attr = 0;
 	for (y = 0; y < win->maxy; y++) {
